<resources>
    <string name="app_name">Registration</string>
    <string name="view_all_students">View All Students</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="present_address">Present Address</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>